--- a/SignalRLiveSportsDashboardDemo/appsettings.json
+++ b/SignalRLiveSportsDashboardDemo/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=DESKTOP-6SDKTRC; Database=FootballDb; Trusted_Connection=True; MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=Samnejad; Database=FootballDb; Trusted_Connection=True; MultipleActiveResultSets=true",
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
